cluster/argocd/sources/kafka/bridge.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kafka-ui-ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kafka-bridge.binesty.corp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: kafka-bridge-bridge-service
          servicePort: 8080
---
